# aa-client

./: Makefile  pyproject.toml
aa_client/: __main__.py  classes.py  cli.py  client.py  config.py  queries.py  singleinstance.py
