[tool.poetry]
name = "aa-client"
version = "0.5.14"
description = "Client library for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://activitywatch.net/"
repository = "https://github.com/ActivityWatch/aw-client/"
documentation = "https://docs.activitywatch.net/"
packages = [
    { include = "aa_client" },
]

[tool.poetry.scripts]
aa-client = "aa_client.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
aa-core = "^0.5.16"
requests = "*"
persist-queue = "*"
click = "^8.0"
tabulate = "*"
typing-extensions = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
pytest = "*"
pytest-cov = "*"
types-requests = "*"
types-tabulate = "*"
gspread = "*"  # used in examples

[tool.mypy]
files = ["aa_client", "tests", "examples"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "UP"]
ignore = ["E402", "E501", "B905"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
